add missing comments and replaced unnecessary code